[metadata]
name = djangoldp_mud
version = attr: djangoldp_mud.__version__
url = https://github.com/Multi-User-Domain/djangoldp-mud
author = Multi User Domain
author_email = c.mackervoy@gmail.com
description = djangoldp package for Multi User Domains

[options]
include_package_data = True
packages = find:
install_requires =
    djangoldp>=2.1

[semantic_release]
version_source = tag
version_variable = djangoldp_mud/__init__.py:__version__
commit_parser = commit_parser.parse
